# linux-hevd

./: .gitignore  LICENSE  README.md  Vagrantfile  compile_and_insmod.sh
builder/: Build_HEVD_Secure_x64.sh  Build_HEVD_Vulnerable_x64.sh
centos-nir/: Vagrantfile
exploit/: arbitrary_write.py  buffer_overflow-stack.py  hevd.py  integer_overflow.py  requirements.txt  uninitialized_memory_stack.py
exploit/hevd_env/: pip-selfcheck.json
module-source/builder/: Build_HEVD_Vulnerable_x64.sh
module-source/driver/: CMakeLists.txt
module-source/driver/CMake/: DetectOS.cmake  LKM.cmake  WDK.cmake
module-source/driver/HEVD/Linux/: HackSysExtremeVulnerableDriver.h
module-source/driver/hevd/: CMakeLists.txt
module-source/driver/hevd/linux/: ArbitraryWrite.h  BufferOverflowStack.c  HackSysExtremeVulnerableDriver.c  IntegerOverflow.c  IntegerOverflow.h  UninitializedMemoryStack.h
scripts/: install_package.sh
sources/CMake/: DetectOS.cmake
sources/HEVD/: CMakeLists.txt
sources/HEVD/Linux/: ArbitraryWrite.c  BufferOverflowStack.h  Common.h  HackSysExtremeVulnerableDriver.c  HackSysExtremeVulnerableDriver.h  UninitializedMemoryStack.c
